--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     <li class="nav-list__item"><a href="#" class="nav-list__link">Testimonios</a></li>
                     <li class="nav-list__item"><a href="#" class="nav-list__link">Contacto</a></li>
                 </ul>
+
+                <i class="fa-solid fa-bars"></i>
             </nav>
         </header>
 
