Avanzando con el responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-list__item"><a href="#" class="nav-list__link">Contacto</a></li>
                 </ul>
 
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" id="hero__bars"></i>
             </nav>
         </header>
 
@@ -43,6 +43,8 @@
             <button class="hero__cta-button">Contáctanos</button>
         </div>
     </section>
+
+
     
     <section class="cardPadre">
         <h1>Nuestros servicios</h1>
